syntax = "proto3";

package xyz.block.ftl.timeline.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "xyz/block/ftl/schema/v1/schema.proto";

option go_package = "github.com/block/ftl/backend/protos/xyz/block/ftl/timeline/v1;timelinepb";
option java_multiple_files = true;

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_LOG = 1;
  EVENT_TYPE_CALL = 2;
  EVENT_TYPE_INGRESS = 3;
  EVENT_TYPE_CRON_SCHEDULED = 4;
  EVENT_TYPE_PUBSUB_PUBLISH = 6;
  EVENT_TYPE_PUBSUB_CONSUME = 7;
  EVENT_TYPE_CHANGESET_CREATED = 8;
  EVENT_TYPE_CHANGESET_STATE_CHANGED = 9;
  EVENT_TYPE_DEPLOYMENT_RUNTIME = 10;
}

enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_TRACE = 1;
  LOG_LEVEL_DEBUG = 5;
  LOG_LEVEL_INFO = 9;
  LOG_LEVEL_WARN = 13;
  LOG_LEVEL_ERROR = 17;
}

message LogEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  google.protobuf.Timestamp timestamp = 3;
  int32 log_level = 4;
  map<string, string> attributes = 5;
  string message = 6;
  optional string error = 7;
  optional string stack = 8;
  optional string changeset_key = 9;
}

message CallEvent {
  optional string request_key = 1;
  string deployment_key = 2;
  google.protobuf.Timestamp timestamp = 3;
  optional ftl.schema.v1.Ref source_verb_ref = 11;
  ftl.schema.v1.Ref destination_verb_ref = 12;
  google.protobuf.Duration duration = 6;
  string request = 7;
  string response = 8;
  optional string error = 9;
  optional string stack = 10;

  reserved 4, 5;
}

message IngressEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  ftl.schema.v1.Ref verb_ref = 3;
  string method = 4;
  string path = 5;
  int32 status_code = 7;
  google.protobuf.Timestamp timestamp = 8;
  google.protobuf.Duration duration = 9;
  string request = 10;
  string request_header = 11;
  string response = 12;
  string response_header = 13;
  optional string error = 14;
}

message CronScheduledEvent {
  string deployment_key = 1;
  ftl.schema.v1.Ref verb_ref = 2;
  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Duration duration = 4;
  google.protobuf.Timestamp scheduled_at = 5;
  string schedule = 6;
  optional string error = 7;
}

message PubSubPublishEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  ftl.schema.v1.Ref verb_ref = 3;
  google.protobuf.Timestamp timestamp = 4;
  google.protobuf.Duration duration = 5;
  string topic = 6;
  string request = 7;
  optional string error = 8;
  int32 partition = 9;
  int64 offset = 10;
}

message PubSubConsumeEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  optional string dest_verb_module = 3;
  optional string dest_verb_name = 4;
  google.protobuf.Timestamp timestamp = 5;
  google.protobuf.Duration duration = 6;
  string topic = 7;
  optional string error = 8;
  int32 partition = 9;
  int64 offset = 10;
}

message ChangesetCreatedEvent {
  string key = 1;
  google.protobuf.Timestamp created_at = 2;
  repeated string modules = 3;
  repeated string to_remove = 4;
}

message ChangesetStateChangedEvent {
  string key = 1;
  ftl.schema.v1.ChangesetState state = 2;
  optional string error = 3;
}

message DeploymentRuntimeEvent {
  string key = 1;
  google.protobuf.Timestamp updated_at = 2;
  optional string element_name = 3;
  string element_type = 4;
  optional string changeset = 5;
}

message Event {
  google.protobuf.Timestamp timestamp = 1;
  // Unique ID for event.
  int64 id = 2;
  oneof entry {
    LogEvent log = 3;
    CallEvent call = 4;
    IngressEvent ingress = 7;
    CronScheduledEvent cron_scheduled = 8;
    PubSubPublishEvent pubsub_publish = 9;
    PubSubConsumeEvent pubsub_consume = 10;
    ChangesetCreatedEvent changeset_created = 11;
    ChangesetStateChangedEvent changeset_state_changed = 12;
    DeploymentRuntimeEvent deployment_runtime = 13;
  }
}
